# Python_web

python_web_01/BOT/: logs.txt
python_web_01/UML/: bot_project_uml.drawio
python_web_02/personal_bot/: logs.txt  pyproject.toml
python_web_02/personal_bot/personal_bot/: logs.txt
python_web_03/file_sorter/: files_creator.py
python_web_04/: app.py  message.html  testing.py
python_web_05/chat/: server.py
python_web_05/chat/exchange/: exchange.py
